Replace Comet FRC project with Marina and Melody FRC projects, updating images and descriptions accordingly. Remove outdated Comet FRC files.

--- a/index.html
+++ b/index.html
@@ -88,11 +88,18 @@
           <p class="text-sm">A SwiftUI wellness app that tracks moods, journals, and personal growth metrics.</p>
         </div>
         </a>
-        <a href="/projects/comet-frc.html">
+        <a href="/projects/Marina-frc.html">
         <div class="bg-white dark:bg-gray-900 p-4 rounded-lg shadow lightbox flex flex-col h-[420px]">
-          <img src="/images/COMET.png" alt="Comet FRC" class="project-img rounded mb-4">
-          <h3 class="text-xl font-bold mb-2">Comet FRC</h3>
+          <img src="/images/Marina.png" alt="Marina FRC" class="project-img rounded mb-4">
+          <h3 class="text-xl font-bold mb-2">Marina FRC</h3>
           <p class="text-sm">A Java-based control system for our FRC team's Marina robot.</p>
+        </div>
+        </a>
+        <a href="/projects/Melody-frc.html">
+        <div class="bg-white dark:bg-gray-900 p-4 rounded-lg shadow lightbox flex flex-col h-[420px]">
+          <img src="/images/Melody.avif" alt="Melody FRC" class="project-img rounded mb-4">
+          <h3 class="text-xl font-bold mb-2">Melody FRC</h3>
+          <p class="text-sm">A sophisticated control system for our FRC team's Melody robot.</p>
         </div>
         </a>
         <a href="/projects/baap.html">
