--- a/projects/Melody-frc.html
+++ b/projects/Melody-frc.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Comet FRC - Avi Sharma Portfolio</title>
+  <title>Melody FRC - Avi Sharma Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=DM+Sans:wght@400;700&display=swap" rel="stylesheet" />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -18,28 +18,27 @@
 
 <body class="bg-white dark:bg-gray-900 text-gray-900 dark:text-white font-sans">
   <section class="parallax min-h-screen flex flex-col justify-center items-center text-center px-4 bg-blue-100 dark:bg-blue-950">
-    <h1 class="text-5xl md:text-6xl font-bold mb-4">Comet FRC</h1>
-    <p class="text-lg md:text-xl max-w-xl mb-6">A Java-based control system for our FRC team's Marina robot.</p>
+    <h1 class="text-5xl md:text-6xl font-bold mb-4">Melody FRC</h1>
+    <p class="text-lg md:text-xl max-w-xl mb-6">A sophisticated control system for our FRC team's Melody robot.</p>
     <div class="flex gap-4 justify-center">
       <a href="#details" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-full transition">Project Details</a>
       <a href="/index.html" class="bg-gray-300 dark:bg-gray-700 hover:bg-gray-400 dark:hover:bg-gray-600 px-6 py-2 rounded-full transition">Back to Portfolio</a>
     </div>
     <div class="flex justify-center mt-4">
-      <a href="https://github.com/Comet-FRC/C2025-Reefscape" target="_blank" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-full transition">See It Here</a>
+      <a href="https://github.com/Comet-FRC/Melody" target="_blank" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-full transition">See It Here</a>
     </div>
   </section>
 
   <section id="details" class="bg-gray-100 dark:bg-gray-800 py-16 px-4">
     <div class="max-w-7xl mx-auto">
       <h2 class="text-4xl font-bold text-center mb-10">Project Details</h2>
-      <p class="text-lg mb-6">Comet FRC is a Java-based control system designed for the Marina robot used in FRC competitions. It supports real-time motor control and sensor feedback to make autonomous decisions.</p>
+      <p class="text-lg mb-6">Melody FRC is a Java-based control system designed for our FRC competition robot. It features advanced path following capabilities and precise motor control systems.</p>
       <ul class="list-disc pl-6 space-y-2">
-        <li>Advanced autonomous pathing to specific nodes on the reef and barge shooting locations</li>
-        <li>Full simulation capabilities using AdvantageScope and the AdvantageKit framework</li>
-        <li>Precise subsystem control using PID controllers with Feed Forward compensation</li>
-        <li>Motor control algorithms</li>
-        <li>Sensor data integration</li>
-        <li>Real-time feedback loop for autonomous behavior</li>
+        <li>Advanced path following with high accuracy</li>
+        <li>Optimized drivetrain control using PID and Feed Forward compensation</li>
+        <li>Smart motor control with soft limits and feedback sensors</li>
+        <li>Real-time sensor feedback integration</li>
+        <li>Autonomous navigation capabilities</li>
       </ul>
       <p class="mt-6">Built with: Java, WPILIB, PathPlanner, and FRC Libraries</p>
     </div>
@@ -50,4 +49,4 @@
   </footer>
 </body>
 
-</html>
+</html> 
