Add source code links to project pages and include project-sorter.js script in index.html

--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
  
   
 
+  <script src="/js/project-sorter.js" defer></script>
   <script>
     const toggle = document.getElementById('theme-toggle');
     const themeIcon = document.getElementById('theme-icon');
