--- a/projects/baap.html
+++ b/projects/baap.html
@@ -24,8 +24,9 @@
       <a href="#details" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-full transition">Project Details</a>
       <a href="/index.html" class="bg-gray-300 dark:bg-gray-700 hover:bg-gray-400 dark:hover:bg-gray-600 px-6 py-2 rounded-full transition">Back to Portfolio</a>
     </div>
-    <div class="flex justify-center mt-4">
+    <div class="flex justify-center mt-4 gap-4">
       <a href="http://bhsavionics.github.io" target="bhsavionics.github.io" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-full transition">See It Here</a>
+      <a href="https://github.com/bhsavionics/bhsavionics.github.io" target="_blank" class="inline-block bg-gray-600 hover:bg-gray-700 text-white px-6 py-2 rounded-full transition">Source Code</a>
     </div>
   </section>
 
