--- a/projects/betterness.html
+++ b/projects/betterness.html
@@ -25,8 +25,7 @@
       <a href="/index.html" class="bg-gray-300 dark:bg-gray-700 hover:bg-gray-400 dark:hover:bg-gray-600 px-6 py-2 rounded-full transition">Back to Portfolio</a>
     </div>
     <div class="flex justify-center mt-4">
-      <!-- TODO: Replace with correct project link -->
-      <a href="#" target="_blank" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-full transition">See It Here</a>
+      <a href="https://github.com/Av1Sharma/Betterness" target="_blank" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-full transition">See It Here</a>
     </div>
   </section>
 
