--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
           <p class="text-sm">A data visualization and prediction tool using FastF1 telemetry data to analyze races and predict outcomes.</p>
         </div>
         </a>
-        <a href="/projects/bettervue.html">
+        <!-- <a href="/projects/bettervue.html">
           <div class="bg-white dark:bg-gray-900 p-4 rounded-lg shadow lightbox flex flex-col h-[420px]">
             <img src="/images/bettervue.png" alt="BetterVue" class="project-img rounded mb-4">
             <h3 class="text-xl font-bold mb-2">BetterVue</h3>
             <p class="text-sm">A web app to view and simulate possible grades, built on StudentVUE's API for fast, clear academic insights.</p>
           </div>
-        </a>
+        </a> -->
       </div>
     </div>
   </section>
