Remove outdated bettervue.html file and update project titles, descriptions, and links in frc-scouting-app.html and todo-public.html for clarity and accuracy.

--- a/projects/frc-scouting-app.html
+++ b/projects/frc-scouting-app.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FRC Scouting App - Avi Sharma Portfolio</title>
+  <title>QSTAR Strategy Analysis - Avi Sharma Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=DM+Sans:wght@400;700&display=swap" rel="stylesheet" />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -18,29 +18,31 @@
 
 <body class="bg-white dark:bg-gray-900 text-gray-900 dark:text-white font-sans">
   <section class="parallax min-h-screen flex flex-col justify-center items-center text-center px-4 bg-blue-100 dark:bg-blue-950">
-    <h1 class="text-5xl md:text-6xl font-bold mb-4">FRC Scouting App</h1>
-    <p class="text-lg md:text-xl max-w-xl mb-6">An app which can be used as an alternative to TBA to collect and analyze match data for strategic decisions.</p>
+    <h1 class="text-5xl md:text-6xl font-bold mb-4">QSTAR Strategy Analysis</h1>
+    <p class="text-lg md:text-xl max-w-xl mb-6">A web application for analyzing FRC team strategies using AI, providing detailed recommendations based on team performance data and EPA statistics.</p>
     <div class="flex gap-4 justify-center">
       <a href="#details" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-full transition">Project Details</a>
       <a href="/index.html" class="bg-gray-300 dark:bg-gray-700 hover:bg-gray-400 dark:hover:bg-gray-600 px-6 py-2 rounded-full transition">Back to Portfolio</a>
     </div>
     <div class="flex justify-center mt-4">
-      <a href="#" target="_blank" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-full transition">See It Here</a>
+      <a href="qstar-pied.vercel.app" target="_blank" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-full transition">See It Here</a>
     </div>
   </section>
 
   <section id="details" class="bg-gray-100 dark:bg-gray-800 py-16 px-4">
     <div class="max-w-7xl mx-auto">
       <h2 class="text-4xl font-bold text-center mb-10">Project Details</h2>
-      <p class="text-lg mb-6">The FRC Scouting App allows teams to easily record match data and make strategic decisions using real-time analysis. Features include:</p>
+      <p class="text-lg mb-6">QSTAR provides AI-powered strategy analysis for FRC teams, helping them make data-driven decisions. Key features include:</p>
       <ul class="list-disc pl-6 space-y-2">
-        <li>Match data collection and analysis</li>
-        <li>Team statistics tracking</li>
-        <li>Strategy insights based on data patterns</li>
+        <li>Real-time team performance analysis</li>
+        <li>AI-powered strategy recommendations</li>
+        <li>EPA data integration</li>
+        <li>Detailed strategy breakdowns for Auto, Teleop, and Endgame periods</li>
+        <li>Interactive team selection interface</li>
       </ul>
-      <p class="mt-6">Built with: JavaScript, React, Firebase</p>
+      <p class="mt-6">Built with: React + Vite, Node.js + Express, Groq LLM API, Statbotics API</p>
       <div class="mt-8 text-center">
-        <img src="first.png" alt="FRC Scouting App" class="max-w-md mx-auto rounded shadow">
+        <img src="first.png" alt="QSTAR Strategy Analysis" class="max-w-md mx-auto rounded shadow">
       </div>
     </div>
   </section>
