--- a/projects/todo-public.html
+++ b/projects/todo-public.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ToDo Public - Avi Sharma Portfolio</title>
+  <title>ToDo - Avi Sharma Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=DM+Sans:wght@400;700&display=swap" rel="stylesheet" />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -18,8 +18,8 @@
 
 <body class="bg-white dark:bg-gray-900 text-gray-900 dark:text-white font-sans">
   <section class="parallax min-h-screen flex flex-col justify-center items-center text-center px-4 bg-blue-100 dark:bg-blue-950">
-    <h1 class="text-5xl md:text-6xl font-bold mb-4">ToDo Public</h1>
-    <p class="text-lg md:text-xl max-w-xl mb-6">A public task management app that allows users to create and track tasks with collaborative features.</p>
+    <h1 class="text-5xl md:text-6xl font-bold mb-4">ToDo</h1>
+    <p class="text-lg md:text-xl max-w-xl mb-6">A personal task management app built with SwiftUI, featuring real-time task tracking, progress visualization, and calendar integration.</p>
     <div class="flex gap-4 justify-center">
       <a href="#details" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-full transition">Project Details</a>
       <a href="/index.html" class="bg-gray-300 dark:bg-gray-700 hover:bg-gray-400 dark:hover:bg-gray-600 px-6 py-2 rounded-full transition">Back to Portfolio</a>
@@ -32,15 +32,17 @@
   <section id="details" class="bg-gray-100 dark:bg-gray-800 py-16 px-4">
     <div class="max-w-7xl mx-auto">
       <h2 class="text-4xl font-bold text-center mb-10">Project Details</h2>
-      <p class="text-lg mb-6">ToDo Public is a collaborative task management tool that helps users track and manage tasks, share them with others, and stay organized.</p>
+      <p class="text-lg mb-6">A native iOS task management application designed for personal productivity, featuring an intuitive interface and powerful task tracking capabilities.</p>
       <ul class="list-disc pl-6 space-y-2">
-        <li>Task creation and management</li>
-        <li>Collaborative features for teams</li>
-        <li>Real-time updates and notifications</li>
+        <li>Real-time task tracking and updates</li>
+        <li>Visual progress bars for each task</li>
+        <li>Due date management and reminders</li>
+        <li>Calendar view for task scheduling</li>
+        <li>Clean, modern SwiftUI interface</li>
       </ul>
-      <p class="mt-6">Built with: React, Node.js, MongoDB</p>
+      <p class="mt-6">Built with: Swift, SwiftUI, Foundation</p>
       <div class="mt-8 text-center">
-        <img src="todo-public.jpg" alt="ToDo Public" class="max-w-md mx-auto rounded shadow">
+        <img src="todo-public.jpg" alt="ToDo App" class="max-w-md mx-auto rounded shadow">
       </div>
     </div>
   </section>
