--- a/projects/sentiment-analyzer.html
+++ b/projects/sentiment-analyzer.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SpotiStats - Avi Sharma Portfolio</title>
+  <title>Sentiment Analyzer</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=DM+Sans:wght@400;700&display=swap" rel="stylesheet" />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -18,7 +18,7 @@
 
 <body class="bg-white dark:bg-gray-900 text-gray-900 dark:text-white font-sans">
   <section class="parallax min-h-screen flex flex-col justify-center items-center text-center px-4 bg-blue-100 dark:bg-blue-950">
-    <h1 class="text-5xl md:text-6xl font-bold mb-4">SpotiStats</h1>
+    <h1 class="text-5xl md:text-6xl font-bold mb-4">Sentiment Analyzer</h1>
     <p class="text-lg md:text-xl max-w-xl mb-6">An app that provides detailed statistics about a user's Spotify listening habits.</p>
     <div class="flex gap-4 justify-center">
       <a href="#details" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-full transition">Project Details</a>
@@ -33,7 +33,7 @@
   <section id="details" class="bg-gray-100 dark:bg-gray-800 py-16 px-4">
     <div class="max-w-7xl mx-auto">
       <h2 class="text-4xl font-bold text-center mb-10">Project Details</h2>
-      <p class="text-lg mb-6">SpotiStats is an app that helps users track and analyze their Spotify listening habits, providing insights such as most listened songs, genres, and time spent on music.</p>
+      <p class="text-lg mb-6">Sentiment Analyzer is an app that helps users track and analyze their Spotify listening habits, providing insights such as most listened songs, genres, and time spent on music.</p>
       <ul class="list-disc pl-6 space-y-2">
         <li>Real-time user statistics analysis including:
           <ul class="list-disc pl-6 mt-2">
@@ -47,7 +47,7 @@
       </ul>
       <p class="mt-6">Built with: Python, pandas, yfinance, etc.</p>
       <div class="mt-8 text-center">
-        <img src="spotistats.jpg" alt="SpotiStats" class="max-w-md mx-auto rounded shadow">
+          <img src="sentiment-analyzer.jpg" alt="Sentiment Analyzer" class="max-w-md mx-auto rounded shadow">
       </div>
     </div>
   </section>
