--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
 
       <footer class="text-center mt-12 pt-6 border-t dark:border-gray-700">
         <p>© 2025 Avi Sharma. All rights reserved.</p>
+        <p class="mt-2 text-sm">Contact me at <a href="mailto:asharmava1@gmail.com" class="underline hover:text-blue-500">asharmava1@gmail.com</a> for any inquiries.</p>
         <div class="flex justify-center space-x-6 mt-4">
           <a href="https://www.linkedin.com/in/avi-sharma-aa5a73223/" target="_blank" class="text-gray-800 dark:text-white hover:text-blue-500">
             <i class="fab fa-linkedin fa-2x"></i>
